syntax = "proto3";

package mdsc.metastore.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "mdsc/metastore/v1/manifest.proto";
import "mdsc/metastore/v1/params.proto";

option go_package = "mdsc/x/metastore/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/mdsc/metastore/v1/params";
  }

  // ListManifest Queries a list of Manifest items.
  rpc GetManifest(QueryGetManifestRequest) returns (QueryGetManifestResponse) {
    option (google.api.http).get = "/mdsc/metastore/v1/manifest/{project_name}";
  }

  // ListManifest defines the ListManifest RPC.
  rpc ListManifest(QueryAllManifestRequest) returns (QueryAllManifestResponse) {
    option (google.api.http).get = "/mdsc/metastore/v1/manifest";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryGetManifestRequest defines the QueryGetManifestRequest message.
message QueryGetManifestRequest {
  string project_name = 1;
}

// QueryGetManifestResponse defines the QueryGetManifestResponse message.
message QueryGetManifestResponse {
  Manifest manifest = 1 [(gogoproto.nullable) = false];
}

// QueryAllManifestRequest defines the QueryAllManifestRequest message.
message QueryAllManifestRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryAllManifestResponse defines the QueryAllManifestResponse message.
message QueryAllManifestResponse {
  repeated Manifest manifest = 1 [(gogoproto.nullable) = false];
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}
